# person-register-backend

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  makefile  pyproject.toml  requirements.txt
app/: settings.py  urls.py
app/core/: models.py
app/people/: admin.py  apps.py  models.py  serializer.py  views.py
app/people/migrations/: 0001_initial.py  0002_alter_person_gender_alter_person_height_and_more.py
